fixed menu alignment

--- a/davisdc/src/secondpage.css
+++ b/davisdc/src/secondpage.css
@@ -157,5 +157,5 @@ h3 {
 
 .no-border {
     border: none;
-    height: auto;
+    table-layout: fixed;
 }
